--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.7'
 services:
   reverse-proxy:
     image: traefik:v2.11
-    entrypoint: ["/entrypoint.sh"]
     command: --configFile=/etc/traefik/traefik.yml
     ports:
       - "80:80"
@@ -12,22 +11,12 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik.yml:/etc/traefik/traefik.yml
       - ./acme.json:/acme.json
-      - ./entrypoint.sh:/entrypoint.sh
-    secrets:
-      - CF_DNS_API_TOKEN
-      - ACME_EMAIL
     environment:
-      - CF_DNS_API_TOKEN_FILE=/run/secrets/CF_DNS_API_TOKEN
-      - ACME_EMAIL_FILE=/run/secrets/ACME_EMAIL
+      - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
+      - ACME_EMAIL=${ACME_EMAIL}
     restart: always
     networks:
       - traefik
-
-secrets:
-  CF_DNS_API_TOKEN:
-    external: true
-  ACME_EMAIL:
-    external: true
 
 networks:
   traefik:
